tests/parse-fail/bad_tuple2.fl.0.exp
Error: bad_tuple2.fl(3,19): Expected comma, but found: )
pub mod bad_tuple2 {
    pub struct BadTuple2 {
        pub t : (a);
                  ^  
    }
}
