tests/parse-fail/bad_tuple2.fl
pub mod bad_tuple2 {
    pub struct BadTuple2 {
        pub t : (a);
    }
}
